# jax-transformer

./: README.md  notebook.ipynb  pyproject.toml  tokenizer.py  train.py  training_loop.py  transformer.py
data/: shakespeare_tokenizer.json
scripts/: tokenizer.py
src/: __init__.py  config.py
src/data/: bpe_loader.py
src/models/: __init__.py  transformer.py
src/training/: __init__.py  training_loop.py
src/utils/: checkpointer.py
tests/: test_transformer.py
