[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jax>=0.9.0",
    "matplotlib>=3.10.8",
    "optax>=0.2.6",
    "transformers>=4.57.6",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]>=0.9.0"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
